@startuml
title Diagrama Entidad Relación

entity Producto {
  + int Id <<PK>>
  --
  String SKU
  String Nombre
  String Descripcion
  String MarcaPieza
  decimal PrecioVenta
  decimal PrecioCompra
  int Stock
  String Pasillo
  String Anaquel
  String ImagenUrl
  boolean EsVisibleEnLinea
}

entity Vehiculo {
  + int Id <<PK>>
  --
  String Marca
  String Modelo
  int AnioInicio
  int AnioFin
  String Motor
  boolean Activo
}

entity Compatibilidad {
  + int Id <<PK>>
  --
  int ProductoId <<FK>>
  int VehiculoId <<FK>>
  String NotaTecnica
}

entity IdentityUser as Usuario {
  + string Id <<PK>>
  --
  string UserName
  string Email
  ...
}

entity CorteCaja {
  + int Id <<PK>>
  --
  string UsuarioId <<FK>>
  DateTime FechaApertura
  DateTime? FechaCierre
  decimal MontoInicial
  decimal TotalVentasEfectivo
  decimal decimal TotalVentasTarjeta
  decimal MontoDeclarado
  decimal Diferencia
}

entity Pedido {
  + int Id <<PK>>
  --
  string ClienteId <<FK>>
  DateTime FechaPedido
  PedidoStatus Status
  decimal TotalPedido
  String DireccionEnvio
  String CiudadEnvio
  String EstadoEnvio
  String CodigoPostalEnvio
  String PaisEnvio
  String NombreReceptor
  boolean RequiereFactura
  String? Rfc
  String? RazonSocial
  int TipoEntrega
  String? Paqueteria
  String? NumeroGuia
  DateTime? FechaEnvio
  int? CorteCajaId <<FK>>
}

entity DetallePedido {
  + int Id <<PK>>
  --
  int PedidoId <<FK>>
  int ProductoId <<FK>>
  int Cantidad
  decimal PrecioUnitario
}

entity MovimientoInventario {
  + int Id <<PK>>
  --
  int ProductoId <<FK>>
  String TipoMovimiento
  int Cantidad
  DateTime FechaRegistro
  String? Referencia
  String? UsuarioId
  String? NombreUsuario
}

entity Scrap {
  + int Id <<PK>>
  --
  int ProductoId <<FK>>
  int Cantidad
  String Motivo
  DateTime FechaRegistro
  String? UsuarioId
  String? NombreUsuario
}

entity SucursalConfig {
  + int Id <<PK>>
  --
  String NombreTienda
  String RFC
  String Direccion
  String Ciudad
  String Estado
  String CP
  String Telefono
}

' Relationships'
Producto "1" -- "*" Compatibilidad
Vehiculo "1" -- "*" Compatibilidad

Usuario "1" -- "*" CorteCaja : realiza
CorteCaja "1" -- "0..*" Pedido : contiene

Usuario "1" -- "*" Pedido : realiza
Pedido "1" -- "*" DetallePedido : contiene
Producto "1" -- "*" DetallePedido : es parte de

Producto "1" -- "*" MovimientoInventario : tiene
MovimientoInventario "*" -- "1" Usuario : realizado por

Producto "1" -- "*" Scrap : tiene
Scrap "*" -- "1" Usuario : realizado por

@enduml